added device screenshots

--- a/device/sim/incvist.ini
+++ b/device/sim/incvist.ini
@@ -6,7 +6,7 @@ MeasureAdcVoltage=2,713999987
 MeasureAdcVoltageF=3,642999887
 MeasureAdcVoltageS=4,487999916
 MeasureT=0,0399944745
-MeasureNoise=46,61000061
+MeasureNoise=12
 MeasureUavr=0,6100000143
 MeasureUamp=1,5
 MeasureUpeak=1,220000029
